--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <!-- The logo is broken into three segments for design effect. -->
         
-        <h1 id=logo>Hori<span id="seo">seo</span>n</h1>
+        <span id=logo>Hori<span id="seo">seo</span>n</h1>
 
         <!--Replaced "div" with semantic element.-->
         <nav>
